--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
             "email": "jey-cee@live.com"
         }
     ],
-    "homepage": "",
+    "homepage": "https://github.com/Jey-Cee/iobroker.primelab",
     "license": "CC-BY-NC",
     "keywords": [
         "PrimeLab",
@@ -21,7 +21,7 @@
     ],
     "repository": {
         "type": "git",
-        "url": ""
+        "url": "https://github.com/Jey-Cee/iobroker.primelab"
     },
     "dependencies": {
         "jsdom": "^11.11.0"
@@ -33,10 +33,11 @@
     },
     "main": "main.js",
     "scripts": {
-        "gulp": "gulp"
+        "gulp": "gulp",
+        "test": "node node_modules/mocha/bin/mocha --exit"
     },
     "bugs": {
-        "url": ""
+        "url": "https://github.com/Jey-Cee/iobroker.primelab/issues"
     },
     "readmeFilename": "README.md"
 }
