--- a/package.json
+++ b/package.json
@@ -1,43 +1,44 @@
 {
-    "name": "iobroker.primelab",
-    "version": "1.0.2",
-    "description": "primelab",
-    "author": {
-        "name": "Jey Cee",
-        "email": "jey-cee@live.com"
-    },
-    "contributors": [
-        {
-            "name": "Jey Cee",
-            "email": "jey-cee@live.com"
-        }
-    ],
-    "homepage": "https://github.com/Jey-Cee/iobroker.primelab",
-    "license": "CC-BY-NC",
-    "keywords": [
-        "PrimeLab",
-        "PoolLab",
-        "Photometer"
-    ],
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/Jey-Cee/iobroker.primelab"
-    },
-    "dependencies": {
-        "jsdom": "^11.11.0"
-    },
-    "devDependencies": {
-        "gulp": "^3.9.1",
-        "mocha": "^4.1.0",
-        "chai": "^4.1.2"
-    },
-    "main": "main.js",
-    "scripts": {
-        "gulp": "gulp",
-        "test": "node node_modules/mocha/bin/mocha --exit"
-    },
-    "bugs": {
-        "url": "https://github.com/Jey-Cee/iobroker.primelab/issues"
-    },
-    "readmeFilename": "README.md"
+  "name": "iobroker.primelab",
+  "version": "1.0.2",
+  "description": "primelab",
+  "author": {
+    "name": "Jey Cee",
+    "email": "jey-cee@live.com"
+  },
+  "contributors": [
+    {
+      "name": "Jey Cee",
+      "email": "jey-cee@live.com"
+    }
+  ],
+  "homepage": "https://github.com/Jey-Cee/iobroker.primelab",
+  "license": "CC-BY-NC",
+  "keywords": [
+    "PrimeLab",
+    "PoolLab",
+    "Photometer"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Jey-Cee/iobroker.primelab"
+  },
+  "dependencies": {
+    "jsdom": "^11.11.0"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "mocha": "^4.1.0",
+    "chai": "^4.1.2",
+    "@iobroker/adapter-core": "^1.0.3"
+  },
+  "main": "main.js",
+  "scripts": {
+    "gulp": "gulp",
+    "test": "node node_modules/mocha/bin/mocha --exit"
+  },
+  "bugs": {
+    "url": "https://github.com/Jey-Cee/iobroker.primelab/issues"
+  },
+  "readmeFilename": "README.md"
 }
