--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
     "url": "https://github.com/Jey-Cee/iobroker.primelab"
   },
   "dependencies": {
-    "jsdom": "^11.11.0"
+    "jsdom": "^11.11.0",
+    "@iobroker/adapter-core": "^1.0.3"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
     "mocha": "^4.1.0",
-    "chai": "^4.1.2",
-    "@iobroker/adapter-core": "^1.0.3"
+    "chai": "^4.1.2"
   },
   "main": "main.js",
   "scripts": {
