--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     }
   ],
   "homepage": "https://github.com/Jey-Cee/iobroker.primelab",
-  "license": "CC-BY-NC",
+  "license": "CC-BY-NC-4.0",
   "keywords": [
     "PrimeLab",
     "PoolLab",
